2010-01-28  Aaron Boodman  <aa@chromium.org>

Reviewed by Darin Adler.

        Expand the NotificationPresenter::checkPermission() interface to send the full
        URL of the requesting context, as well as a pointer to the document if that
        context was a document.

        https://bugs.webkit.org/show_bug.cgi?id=34238

        * notifications/Notification.cpp:
        (WebCore::Notification::Notification):
        * notifications/NotificationCenter.cpp:
        (WebCore::NotificationCenter::NotificationCenter):
        (WebCore::NotificationCenter::checkPermission):
        Pass the full URL and document from the requesting context when calling
        NotificationPresenter::checkPermission().

        * notifications/NotificationPresenter.h:
        (WebCore::NotificationPresenter::):
        Expand interface.
2010-01-27  Aaron Boodman  <aa@chromium.org>

        Reviewed by Darin Adler.

        Send full URL and application id of requesting context to Chromium
        when checking notification permissions.

        https://bugs.webkit.org/show_bug.cgi?id=34238

        * public/WebDocument.h:
        * src/WebDocument.cpp:
        (WebKit::WebDocument::applicationID):
        Implement applicationID() method.

        * public/WebNotificationPresenter.h:
        * src/NotificationPresenterImpl.cpp:
        (WebKit::NotificationPresenterImpl::checkPermission):
        * src/NotificationPresenterImpl.h:
        Send applicationID and full URL through to Chromium.
2010-01-27  Aaron Boodman  <aa@chromium.org>

        Expand NotificationCenter::checkPermission() interface.
        It now passes the full URL instead of just the origin.

        https://bugs.webkit.org/show_bug.cgi?id=34238

        * WebCoreSupport/WebDesktopNotificationsDelegate.cpp:
        (WebDesktopNotificationsDelegate::checkPermission):
        * WebCoreSupport/WebDesktopNotificationsDelegate.h:

Canonical link: https://commits.webkit.org/45378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54008 268f45cc-cd09-0410-ab3c-d52691b4dbfc