WebKit/chromium/src/WebDocument.cpp
@@ -32,12 +32,14 @@
 #include "WebDocument.h"
 
 #include "Document.h"
+#include "DocumentLoader.h"
 #include "Element.h"
 #include "HTMLAllCollection.h"
 #include "HTMLBodyElement.h"
 #include "HTMLCollection.h"
 #include "HTMLElement.h"
 #include "HTMLHeadElement.h"
+#include "NodeList.h"
 
 #include "WebElement.h"
 #include "WebFrameImpl.h"
@@ -109,6 +111,40 @@ WebURL WebDocument::completeURL(const WebString& partialURL) const
 WebElement WebDocument::getElementById(const WebString& id) const
 {
     return WebElement(constUnwrap<Document>()->getElementById(id));
+}
+
+WebString WebDocument::applicationID() const
+{
+    const char* kChromeApplicationHeader = "x-chrome-application";
+
+    // First check if the document's response included a header indicating the
+    // application it should go with.
+    const Document* document = constUnwrap<Document>();
+    Frame* frame = document->frame();
+    if (!frame)
+        return WebString();
+
+    DocumentLoader* loader = frame->loader()->documentLoader();
+    if (!loader)
+        return WebString();
+
+    WebString headerValue =
+        loader->response().httpHeaderField(kChromeApplicationHeader);
+    if (!headerValue.isEmpty())
+        return headerValue;
+
+    // Otherwise, fall back to looking for the meta tag.
+    RefPtr<NodeList> metaTags =
+        const_cast<Document*>(document)->getElementsByTagName("meta");
+    for (unsigned i = 0; i < metaTags->length(); ++i) {
+        Element* element = static_cast<Element*>(metaTags->item(i));
+        if (element->getAttribute("http-equiv").lower() ==
+                kChromeApplicationHeader) {
+            return element->getAttribute("value");
+        }
+    }
+
+    return WebString();
 }
 
 } // namespace WebKit
