third_party/WebKit/WebCore/notifications/Notification.cpp
@@ -39,7 +39,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Document.h"
 #include "EventNames.h"
-#include "WorkerContext.h" 
+#include "WorkerContext.h"
 
 namespace WebCore {
 
@@ -50,7 +50,8 @@ Notification::Notification(const String& url, ScriptExecutionContext* context, E
     , m_presenter(provider)
 {
     ASSERT(m_presenter);
-    if (m_presenter->checkPermission(context->securityOrigin()) != NotificationPresenter::PermissionAllowed) {
+    Document* document = context->isDocument() ? static_cast<Document*>(context) : 0;
+    if (m_presenter->checkPermission(context->url(), document)) != NotificationPresenter::PermissionAllowed) {
         ec = SECURITY_ERR;
         return;
     }
@@ -70,11 +71,12 @@ Notification::Notification(const NotificationContents& contents, ScriptExecution
     , m_presenter(provider)
 {
     ASSERT(m_presenter);
-    if (m_presenter->checkPermission(context->securityOrigin()) != NotificationPresenter::PermissionAllowed) {
+    Document* document = context->isDocument() ? static_cast<Document*>(context) : 0;
+    if (m_presenter->checkPermission(context->url(), document)) != NotificationPresenter::PermissionAllowed) {
         ec = SECURITY_ERR;
         return;
     }
-
+    
     KURL icon = context->completeURL(contents.icon());
     if (!icon.isEmpty() && !icon.isValid()) {
         ec = SYNTAX_ERR;
