third_party/WebKit/WebKit/win/WebCoreSupport/WebDesktopNotificationsDelegate.h
@@ -37,6 +37,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 interface IWebDesktopNotificationPresenter;
 
+namespace WebCore {
+class Document;
+class KURL;
+}
+
 class WebDesktopNotificationsDelegate : public WebCore::NotificationPresenter {
 public:
     WebDesktopNotificationsDelegate(WebView* view);
@@ -46,7 +51,7 @@ public:
     virtual void cancel(WebCore::Notification* object);
     virtual void notificationObjectDestroyed(WebCore::Notification* object);
     virtual void requestPermission(WebCore::SecurityOrigin* origin, PassRefPtr<WebCore::VoidCallback> callback);
-    virtual WebCore::NotificationPresenter::Permission checkPermission(WebCore::SecurityOrigin* origin);
+    virtual WebCore::NotificationPresenter::Permission checkPermission(const KURL& url, Document* document);
 
 private:
     bool hasNotificationDelegate();
